# qt_utis

./: CMakeLists.txt
tests/: file_model_test.cpp  main.cpp  model_decorator_test.cpp  mytableview_test.cpp  table_to_tree_proxy_model_test.cpp
utils/: alignproxymodel.cpp  alignproxymodel.h  betterquery.h  colorporxymodel.cpp  colorporxymodel.h  custumsortfilterproxymodel.cpp  custumsortfilterproxymodel.h  dirty.h  file_model.cpp  file_model.h  horizontalTabStyle.h  immutable_delegate.h  model_decorator.h  modifyflagsproxymodel.cpp  modifyflagsproxymodel.h  mytableview.cpp  mytableview.h  numberformatdelegate.cpp  numberformatdelegate.h  property.h  readonly_combobox.h  save_headers.h  scope_logger.h  table_to_tree_proxy_model.cpp  table_to_tree_proxy_model.h  test.h  tree_sql_relatioanl_delegate.h  utils_global.h
